Grid-gap fix

--- a/css/main.css
+++ b/css/main.css
@@ -3514,7 +3514,7 @@ main > .sidebar-nav-wrapper {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  grid-gap: 24px;
+  grid-gap: 48px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
