--- a/sass/pages/_work.scss
+++ b/sass/pages/_work.scss
@@ -598,7 +598,7 @@ a.link.link--large {
         .text-image-wrapper {
           display: grid;
           grid-template-columns: 1fr 1fr;
-          grid-gap: $--spacing-m;
+          grid-gap: $--spacing-xl;
           justify-content: center;
           align-items: center;
           margin-bottom: $--spacing-xl;
